Se agrega modificaciones a los input con .style y .innerText

--- a/dom.html
+++ b/dom.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="">
-        <input type="email" class="input_email" value="pepe@gmail.com" placeholder="Tu email">
+        <input type="email" class="input_mail" value="pepe@gmail.com" placeholder="Tu email">
         <input type="password" id="pass" placeholder="Tu password">
         <input type="text" value="pepe" placeholder="Tu nombre">
         <button class="btn_registro">Ingresa</button>
